# f1-data-dowloader

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml
.github/workflows/: download_and_parse.yml  manual.yml
f1_data_downloader/: main.py
f1_data_downloader/parser/: parse_constructor_championship.py  parse_driver_championship.py  parse_quali.py  parse_race_classification.py  parse_race_history_chart.py  parse_race_lap_chart.py  parse_race_pit_stops.py  parse_sprint_classification.py  parse_sprint_history_chart.py  parse_sprint_lap_chart.py  utils.py
parser/: parse_quali.py
